package com.ucommerce.codegen.builders;

public abstract class JavaSourceBuilder {
}
